# cimple-py

./: codecov.yml  pyproject.toml
.github/workflows/: build-images.yml  code-quality.yml  lint.yml  test.yml
dockerfiles/: linux-x86_64.Dockerfile  windows-x86_64.Dockerfile
docs/: docusaurus.config.ts  package.json  pnpm-lock.yaml
docs/docs/: builtin_variables.md  container_filesystem_layout.md  intro.md  s3_data_layout.md
scripts/: qa.ps1
src/cimple/: constants.py  env.py  graph.py  hash.py  main.py  process.py  stream.py  system.py  tarfile.py  util.py
src/cimple/cmd/: __init__.py  run_rules.py  snapshot.py  stream.py
src/cimple/common/: __init__.py  chroot.py  cmd.py  constants.py  hash.py  image.py  logging.py  str_interpolation.py  system.py  tarfile.py  util.py  version.py
src/cimple/graph/: __init__.py
src/cimple/images/: __init__.py  ops.py  windows_bootstrap_msys_x86_64.py
src/cimple/models/: __init__.py  pkg.py  pkg_config.py  snapshot.py  stream.py
src/cimple/pkg/: __init__.py  build_pkg.py  core.py  cygwin.py  ops.py  pkg_config.py
tests/: conftest.py  test_cmd.py  test_cygwin_path.py  test_cygwin_repo.py  test_dep_graph.py  test_env.py  test_graph.py  test_install_pkg.py  test_interpolate.py  test_models.py  test_pkg.py  test_pkg_config.py  test_pkg_ops.py  test_snapshot.py  test_stream.py  test_tarfile.py  test_version.py
tests/cmd/: test_run_rules_cmd.py  test_snapshot_cmd.py
tests/cygwin/: conftest.py  test_build_cygwin_pkg.py  test_cygwin_path.py  test_cygwin_repo.py
tests/snapshot/: test_snapshot_add.py  test_snapshot_core.py
(+40 files in other folders)
