[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cimple-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pydantic", "typer", "requests"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
cimple = "cimple.main:main"
